Compatibility fixes for collapsable menu
- Add JS check for details/summary support
  - No JS: Menu is initially open.
  - JS but no support: Menus is open, the toggle isn't shown.
- Mark the details element as presentational for ARIA
- Use aria controls to connect the summary to the list
- Fix list marker positioning
  (on browsers that support list-style on summary)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,12 +272,13 @@ a.ref {
   margin: 2px 0 0 2px;
   flex: 10rem;
 }
-
+.menu a {
+  display: block;
+}
 .menu a,
-.menu details summary {
+.menu summary {
   background: #005a9c;
   color: #eee;
-  display: block;
   font-size: .9rem;
   height: 100%;
   padding: .5rem .3rem;
@@ -383,12 +384,12 @@ h4 {
       "footer";
   }
 
-  .menu details {
+  .menu details:not(.no-details-support) {
     display: block;
     margin-bottom: 2px;
   }
 
-  .menu details:not([open]) + ul {
+  .menu details:not(.no-details-support):not([open]) + ul {
     display: none;
   }
 
@@ -399,7 +400,8 @@ h4 {
   .menu details[open] summary {
     width: max-content;
     margin-left: auto;
-    list-style: "×"
+    padding: 0.5rem;
+    list-style-type: "× ";
   }
 
   .menu ul {
